# hyprtoolkit

./: .gitignore  CMakeLists.txt  README.md  flake.nix  hyprtoolkit.pc.in
.github/workflows/: nix.yml
include/hyprtoolkit/core/: Backend.hpp  CoreMacros.hpp  Input.hpp  LogTypes.hpp  Output.hpp  SessionLock.hpp  Timer.hpp
include/hyprtoolkit/element/: Button.hpp  Checkbox.hpp  ColumnLayout.hpp  Combobox.hpp  Element.hpp  Image.hpp  Line.hpp  Null.hpp  ProgressBar.hpp  RadioGroup.hpp  Rectangle.hpp  RowLayout.hpp  ScrollArea.hpp  Slider.hpp  Spinbox.hpp  Text.hpp  Textbox.hpp  Texture.hpp
include/hyprtoolkit/palette/: Color.hpp  Gradient.hpp  Palette.hpp
include/hyprtoolkit/system/: Icons.hpp
include/hyprtoolkit/types/: FontSizeType.hpp  FontTypes.hpp  ImageTypes.hpp  PointerShape.hpp  SizeType.hpp
include/hyprtoolkit/window/: Window.hpp  WindowTypes.hpp
nix/: default.nix  overlays.nix
scripts/: generateShaderIncludes.sh
src/: Macros.hpp
src/bindings/lua/: LuaBindings.cpp  LuaBindings.hpp  LuaState.cpp  LuaState.hpp
src/bindings/lua/bindings/: Core.cpp  ElementBuilders.cpp  Elements.cpp  Types.cpp  Window.cpp
src/bindings/lua/helpers/: CallbackAdapter.hpp  ColorFnAdapter.hpp  SmartPtrAdapter.hpp
src/core/: AnimatedVariable.hpp  AnimationManager.cpp  AnimationManager.hpp  Backend.cpp  Backend.hpp  Input.cpp  Input.hpp  InternalBackend.cpp  InternalBackend.hpp  Logger.cpp  Logger.hpp
src/core/renderPlatforms/: Egl.cpp  Egl.hpp
src/element/: Button.cpp  Button.hpp  Checkbox.cpp  Checkbox.hpp  ColumnLayout.cpp  Element.cpp  Element.hpp  Image.cpp  LinearLayout.hpp  Null.cpp  Rectangle.cpp  Rectangle.hpp  RowLayout.cpp  Spinbox.cpp  Spinbox.hpp  SpinboxSpinner.cpp  Text.cpp  Text.hpp  Texture.cpp
src/element/button/: Builder.cpp  Button.cpp  Button.hpp
src/element/checkbox/: Builder.cpp  Checkbox.cpp  Checkbox.hpp  Checkmark.cpp
src/element/columnLayout/: Builder.cpp  ColumnLayout.cpp  ColumnLayout.hpp
src/element/combobox/: Builder.cpp  Combobox.cpp  Combobox.hpp  ComboboxClickable.cpp  DropdownHandle.cpp
src/element/image/: Builder.cpp  Image.cpp  Image.hpp
src/element/line/: Builder.cpp  Line.cpp  Line.hpp
src/element/null/: Builder.cpp  Null.cpp  Null.hpp
src/element/progressBar/: Builder.cpp  ProgressBar.cpp  ProgressBar.hpp
src/element/radioGroup/: Builder.cpp  RadioGroup.cpp  RadioGroup.hpp
src/element/rectangle/: Builder.cpp  Rectangle.cpp  Rectangle.hpp
src/element/rowLayout/: Builder.cpp  RowLayout.cpp  RowLayout.hpp
src/element/scrollArea/: Builder.cpp  ScrollArea.cpp  ScrollArea.hpp
src/element/slider/: Builder.cpp  Slider.cpp  Slider.hpp  SliderSlider.cpp
src/element/spinbox/: Builder.cpp  Spinbox.cpp  Spinbox.hpp  SpinboxAngle.cpp  SpinboxSpinner.cpp
src/element/text/: Builder.cpp  Text.cpp  Text.hpp
src/element/textbox/: Builder.cpp  Textbox.cpp  Textbox.hpp
src/helpers/: Color.hpp  DamageRing.cpp  DamageRing.hpp  Env.cpp  Env.hpp  FastStringMap.hpp  Format.cpp  Format.hpp  Memory.hpp  Signal.hpp  Timer.cpp  Timer.hpp  UTF8.cpp  UTF8.hpp
src/layout/: Positioner.cpp  Positioner.hpp
src/lock/: WaylandSessionLock.hpp
src/output/: WaylandOutput.cpp  WaylandOutput.hpp
src/palette/: Color.cpp  ConfigManager.cpp  ConfigManager.hpp  Gradient.cpp  Palette.cpp
src/renderer/: Polygon.cpp  Polygon.hpp  Renderer.hpp  RendererTexture.hpp
src/renderer/gl/: Framebuffer.cpp  Framebuffer.hpp  GL.hpp  GLTexture.cpp  GLTexture.hpp  OpenGL.cpp  OpenGL.hpp  Renderbuffer.cpp  Renderbuffer.hpp  Shader.hpp  Sync.cpp  Sync.hpp
src/renderer/gl/shaders/glsl/: border.frag
src/renderer/sync/: SyncTimeline.cpp  SyncTimeline.hpp
src/resource/assetCache/: AssetCache.cpp  AssetCache.hpp  AssetCacheEntry.cpp  AssetCacheEntry.hpp
src/sessionLock/: WaylandSessionLock.cpp  WaylandSessionLock.hpp
src/system/: DesktopMethods.cpp  DesktopMethods.hpp  Icons.cpp  Icons.hpp  SystemIcon.cpp
src/types/: FontSizeType.cpp  SizeType.cpp
src/window/: Builder.cpp  IWaylandWindow.cpp  IWaylandWindow.hpp  ToolkitWindow.cpp  ToolkitWindow.hpp  WaylandLayer.cpp  WaylandLayer.hpp  WaylandLockSurface.cpp  WaylandLockSurface.hpp  WaylandPopup.cpp  WaylandPopup.hpp  WaylandWindow.cpp  WaylandWindow.hpp  Window.hpp
tests/: AccentButton.cpp  AutosizeTest.cpp  Controls.cpp  Dialog.cpp  LuaRunner.cpp  ShortcutsInhibit.cpp  SimpleSessionLock.cpp  SimpleWindow.cpp
tests/unit/elements/: Image.cpp  ScrollArea.cpp  Slider.cpp  Text.cpp  Textbox.cpp
tests/unit/helpers/: Env.cpp  FastStringMap.cpp  UTF8.cpp
tests/unit/positioner/: Positioner.cpp
tests/unit/tricks/: Tricks.cpp  Tricks.hpp
